fixes color behind navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #fff;
+  background: #000000;
 }
 
 a {
